# MP4201-ESP32-ST7789

./: .gitignore
docs/: index.html  manifest.json  sw.js
firmware/: CMakeLists.txt
firmware/components/MCP4725/: CMakeLists.txt  MCP4725.c
firmware/components/MCP4725/include/: MCP4725.h
firmware/components/MP4201/: CMakeLists.txt  IIC_driver.c  MP4201.c  MP4201Driver.c  MP4201Middleware.c
firmware/components/MP4201/include/: IIC_driver.h  MP4201.h  MP4201Command.h  MP4201Driver.h  MP4201Middleware.h
firmware/components/st7789_driver/: CMakeLists.txt  st7789_driver.c  st7789_driver.h
firmware/main/: CMakeLists.txt  ble_subs.c  idf_component.yml  lv_port_disp.c  main.c
